tests/testcases/errors/BCE0132-3.boo
"""
BCE0132-3.boo(9,11): BCE0132: The namespace 'Foo.Bar' already contains a definition for 'A'.
"""
namespace Foo.Bar

class A:
	pass
	
interface A:
	pass
